syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";

message SumRequest {
  int32 first_number = 1;
  int32 second_number = 2;
}

message SumResponse {
  int32 sum_result = 1 ;
}

message PrimeNumberDecompositionRequest {
  int64 number = 1;
}

message PrimeNumberDecompositionResponse {
  int64 prime_factor = 1;
}

message SquareRootRequest {
  int32 number = 1 ;
}
message SquareRootResponse {
  double number_root = 1;
}

service CalculatorService{
  rpc Sum(SumRequest) returns(SumResponse) {}
  rpc PrimeNumberDecomposition (PrimeNumberDecompositionRequest)
      returns (stream  PrimeNumberDecompositionResponse) {}

  // error handling
  // this rpc will throw an exception if the sent number is negative
  // the error being sent is of type INVALID_ARGUMENT
  rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}
}
